--- a/21 - Geolocation/package.json
+++ b/21 - Geolocation/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.12.5 <2.23.2"
+    "browser-sync": "^1.3.7"
+  },
+  "dependencies": {
+    "axios": "^1.8.4",
+    "debug": "^4.4.0",
+    "lodash": "^4.17.21"
   }
 }
